--- a/style.css
+++ b/style.css
@@ -1,14 +1,43 @@
 title{
     text-align: center;
-    font-size: large;
+    font-size: larger;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: black;
     font-weight: 900;
 }
 body{
     text-align: center;
-    font-size: medium;
+    font-size: large;
     font-weight: 500;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: blanchedalmond;
+    background-image: url(pic.jpg);
+    background-size:auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
+footer{
+    position: bottom;
+    text-align: left;
+    font-size: medium;
+    color: aqua;
+    background-image: url(sec.jpg);
+    background-size: contain;
+    background-attachment: fixed;
+    padding: 50px;
+}
+button{
+    display: block;
+    margin: auto;
+    width: 20%;
+    font-size: 17px;
+    padding: 9px 10px;
+    cursor: pointer;
+    border: 2px solid white;
+    border-radius: 8px;
+    transition: 900ms  ease-in;
+}
+button:hover{ background-color: aqua;
+color: blue;}
+h1{ color: aqua;
+font-size: xx-large;
+font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;}
